Fixes #1868 Utilities adjust `.lexicon-icon` offset in `.inline-item` so it aligns better with text

--- a/packages/clay-css/src/scss/variables/_utilities.scss
+++ b/packages/clay-css/src/scss/variables/_utilities.scss
@@ -40,7 +40,7 @@ $heading-text-margin-top: auto !default;
 
 // Inline Item
 
-$inline-item-lexicon-icon-margin-top: -0.21429em !default;
+$inline-item-lexicon-icon-margin-top: -0.1em !default;
 $inline-item-spacer-x: 0.5rem !default; // 8px
 
 $page-header-bg: $gray-200 !default;
